# docs/yaml/openapi.yaml
@@ -4,8 +4,8 @@ info:
   title: Back End Demonstration API
   description: A simple blog API.
   contact: 
-    name: Master Chit
-    email: hcwong@vtc.edu.hk
+    name: Tse Ho Fai
+    email: 227021367@stu.vtc.edu.hk
   license:
     name: Apache 2.0
     url: 'https://www.apache.org/licenses/LICENSE-2.0.html'
@@ -15,61 +15,115 @@ servers:
 tags:
   - name: Users
     description: API endpoints for user management.
-  - name: Articles
-    description: Access and perform CRUD operations on blog entries.
   - name: Cats
     description: Access and perform CRUD operations on cat entries.
 paths:
-  /articles/{id}:
+  /cats:
+    get:
+      tags:
+        - Cats
+      description:
+        Get all cat
+      responses:
+        '200':
+          description: Return exisiting cat list from database
+        '404':
+          description: No data from database
+
+  /cats/{id}:
     parameters:
       - in: path
         name: id
         schema:
           type: integer
         required: true
-        description: Numeric id of the article
+        description: Id of the cat
     get:
       tags:
-        - Articles
+        - Cats
       description:
-        Get article by id.
+        Get cat by id.
       responses:
         '200':
-          description: View of an article record.
+          description: View of an cat record.
         '404':
-          description: Article was not found in the DB.
+          description: Cat was not found in the DB.
     post:
+      security:
+        - basicAuth: []    
       tags:
-        - Articles
+        - Cats
       description:
-        Create a new article
+        Create a new cat
       requestBody:
-        description: A new article data
+        description: A new cat data
         required: true
         content:
           application/json:
             schema:
-              $ref: ./article.json#/definitions/article
+              $ref: ./cat.json
         responses:
           '201':
-            description: Articles created
+            description: Cats created
     put:
+      security:
+        - basicAuth: []
       tags:
-        - Articles
-      description:
-        Update article by ID.
+        - Cats
+      description: Update cat by ID.
+      content:
+        application/json:
+          schema:
+            $ref: ./cat.json
       responses:
         '200':
-          description: View of an article record.
+          description: View of an cat record.
         '404':
-          description: Article was not found in the DB.
+          description: Cat was not found in the DB.
     delete:
       tags:
-        - Articles
+        - Cats
       description:
-        Delete article by ID.
+        Delete cat by ID.
       responses:
         '200':
-          description: View of an article record.
+          description: View of an cat record.
         '404':
-          description: Article was not found in the DB.
+          description: Cat was not found in the DB.
+
+  /users:
+    post:  
+      tags:
+        - Users
+      description:
+        User Register
+      requestBody:
+        description: A new cat data
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: ./user.json
+      responses:
+        '201':
+          description: Register successfully
+        '500':
+          description: Insert Data failed   
+          
+  /users/login:
+    post:
+      tags:
+        - Users
+      description:
+        User Login
+      requestBody:
+        content:
+          application/json:
+            example:
+              username: Bob
+              password: 123
+      responses:
+        '200':
+          description: Login successfully
+        '500':
+          description: Login Fail  
